<?xml version="1.0" encoding="utf-8"?><!--Generated by crowdin.com-->
<resources>

    <string name="app_name">Fugue</string>
    <string name="menu_about">关于</string>
    <string name="msg_start_failed">Android 拒绝启动 VPN 服务.</string>
    <string name="msg_vpn_cancelled">VPN 连接已取消</string>
    <string name="title_root">root</string>
    <string name="title_mediaserver">mediaserver</string>
    <string name="title_nobody">没有人</string>


    <string name="beautify">美化</string>
    <string name="advanced">高级</string>
    <string name="capacity_state">智能状态</string>
    <string name="start">启动</string>
    <string name="begin">开始</string>
    <string name="release">放行</string>
    <string name="pass">注册码</string>
    <string name="vip_video_analysis">Vip视频解析</string>
    <string name="please_input_video_url">请输入视频查询的网页地址</string>
    <string name="please_input_confirm_video_url">请输入视频地址</string>
    <string name="analysis_result_no">暂无解析结果</string>
    <string name="please_input_analysis">请输入解析网址</string>
    <string name="_null">为空</string>
    <string name="code_not_null">值不能为空</string>
    <string name="analysis_wbset_str_not_null">解析网址不能为空</string>
    <string name="pass_hint">注册码用于验证登录！</string>
    <string name="in_put_pass">输入注册码</string>
    <string name="network_speed">网速</string>
    <string name="please_input_network_speed_refresh_time">刷新速率 (500&lt;=x&lt;=3000)</string>
    <string name="please_input_network_speed_tv_size">字体大小 (1&lt;=x&lt;=30)</string>
    <string name="tansparent">透明</string>
    <string name="wallpaper">壁纸</string>
    <string name="fingerprint" translatable="false">ef46f813d2c8a064d72c936b9b96d1cccc989378</string>

    <string name="confirm_clear">确认清除?</string>
    <string name="yes">确认</string>
    <string name="aes_encrypt">AES加密</string>
    <string name="import_qrconfig_success">导入二维码模式成功!</string>
    <string name="import_qrconfig_error">导入二维码模式失败!</string>
    <string name="no">取消</string>
    <string name="the_lack_of_permission">缺少必要的权限!</string>
    <string name="please_allow_permission">请到设置中允许权限!</string>


    <string name="clear_log">清除日志</string>
    <string name="already_clear_log">已清除</string>
    <string name="share_log">分享日志</string>


    <string name="home">主页</string>
    <string name="all_page">所有页面</string>
    <string name="other">其他</string>
    <string name="config">配置</string>
    <string name="edit_current_config">编辑当前</string>
    <string name="new_config">新建</string>
    <string name="select">选择</string>

    <string name="text_is_null">文本为空</string>

    <string name="set_is_current_file">设置为当前配置文件？</string>

    <string name="share">分享</string>
    <string name="edit">编辑</string>

    <string name="success">成功</string>

    <string name="content_change_is_need_save">配置文件发生改变，是否储存？</string>
    <string name="create_new_config">创建配置文件</string>
    <string name="create">创建</string>
    <string name="save">保存</string>
    <string name="already_save">已保存</string>
    <string name="please_input_file_name">请输入名称</string>
    <string name="name_not_allowd_null">名称不能为空</string>
    <string name="file_already_exits">文件已存在</string>
    <string name="please_select">请选择</string>

    <string name="config_exception">配置文件异常</string>
    <string name="delate">删除</string>
    <string name="already_delate_wallpaper">已删除壁纸</string>

    <string name="feedback">反馈</string>
    <string name="please_install_qq">请安装qq!</string>
    <string name="use_qq_and_talk_to_auth">我想与作者交谈</string>

    <string name="current_config">当前配置</string>
    <string name="start_success">启动成功</string>
    <string name="stop">关闭</string>
    <string name="start2">开启</string>
    <string name="already_stop">已关闭</string>
    <string name="start_success_default">启动成功 (透明代理)</string>
    <string name="config_explain">配置说明</string>
    <string name="already_copy">已复制</string>
    <string name="copy">复制</string>

    <string name="re_start">重启</string>

    <string name="please_select_explore_util">选择浏览工具</string>

    <string name="shrink">缩小</string>
    <string name="enlarge">扩大</string>

    <string name="log_hint_load_default_config">加载默认配置</string>
    <string name="log_hint_wait_mobile_internet_connected">等待移动网络连接</string>
    <string name="log_hint_start_success">启动成功</string>
    <string name="log_hint_restart_success">重启成功</string>
    <string name="can_not_start">无法启动</string>


    <string name="restart_vpn_take_effect">重启VPN生效！</string>

    <string name="speed_already_start">网速显示已启动</string>
    <string name="speed_already_stop">网速显示已关闭</string>
    <string name="speed_need_system_alert_window_permisson">网速显示需要悬浮窗权限,请手动打开！</string>

    <string name="more_than_use_time">超过使用时间</string>
    <string name="authentication_ok">恭喜！身份验证成功！</string>
    <string name="authentication_error">身份验证失败</string>
    <string name="app_the_forthcoming">应用即将退出</string>
    <string name="is_doing_authentication">正在进行身份验证，请勿关闭网络！</string>
    <string name="attempt_to_validate_authentication">尝试身份验证</string>

    <string name="remote">远程</string>
    <string name="get_remote_configs">获取远程配置文件，请稍等片刻！</string>
    <string name="update">更新</string>
    <string name="check_update">检查更新</string>
    <string name="download_be_defeated">下载失败</string>
    <string name="download_finish">下载完成 </string>//manual operation

    <string name="background_update">进行后台更新</string>

    <string name="please_open_network_retry">请打开网络重试!</string>
</resources>
